# LiteMon

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: async_basic_demo.py  basic_demo.py
litemon/: metrics.py
src/litemon/: __init__.py  dashboard.py  metrics.py  monitor.py
tests/: test_dashboard.py  test_metrics.py  test_monitor.py
