[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litemon"
version = "0.1.0"
description = "LiteMon — A lightweight Python function monitoring tool with live metrics."
authors = [
    { name="Habeb Nawatha", email="your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["monitoring", "metrics", "decorator", "dashboard", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src/litemon --cov-report=term-missing"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "requests",
    "ruff"
]
